# document-processing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: retrieval-eval_non-dora-delete-me.yml
document_processing/: base.py  chunking.py  embeddings.py  evaluation.py  factory.py  pdfs.py  process_folder.py  word_docs.py
tests/: test__chunking.py
